// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkPermissionMenu render() it should render correct menu 1`] = `
<DropdownMenu
  constrainToScrollParent={false}
  constrainToWindow={true}
  isRightAligned={false}
>
  <PlainButton
    className="lnk is-disabled bdl-is-disabled"
    disabled={true}
  >
    <MenuToggle>
      <FormattedMessage
        defaultMessage="Can view and download"
        id="boxui.unifiedShare.sharedLinkPermissionsViewDownload"
      />
    </MenuToggle>
  </PlainButton>
  <Menu
    className="ums-share-permissions-menu"
    isHidden={false}
    isSubmenu={false}
  >
    <SelectMenuItem
      isSelected={true}
      key="canViewDownload"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownload"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownloadDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
    <SelectMenuItem
      isSelected={false}
      key="canViewOnly"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnly"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnlyDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
  </Menu>
</DropdownMenu>
`;

exports[`features/unified-share-modal/SharedLinkPermissionMenu render() it should render correct menu 2`] = `
<DropdownMenu
  constrainToScrollParent={false}
  constrainToWindow={true}
  isRightAligned={false}
>
  <PlainButton
    className="lnk"
    disabled={false}
  >
    <MenuToggle>
      <FormattedMessage
        defaultMessage="Can view and download"
        id="boxui.unifiedShare.sharedLinkPermissionsViewDownload"
      />
    </MenuToggle>
  </PlainButton>
  <Menu
    className="ums-share-permissions-menu"
    isHidden={false}
    isSubmenu={false}
  >
    <SelectMenuItem
      isSelected={true}
      key="canViewDownload"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownload"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownloadDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
    <SelectMenuItem
      isSelected={false}
      key="canViewOnly"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnly"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnlyDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
  </Menu>
</DropdownMenu>
`;

exports[`features/unified-share-modal/SharedLinkPermissionMenu render() it should render correct menu 3`] = `
<DropdownMenu
  constrainToScrollParent={false}
  constrainToWindow={true}
  isRightAligned={false}
>
  <PlainButton
    className="lnk is-disabled bdl-is-disabled"
    disabled={true}
  >
    <MenuToggle>
      <FormattedMessage
        defaultMessage="Can view only"
        id="boxui.unifiedShare.sharedLinkPermissionsViewOnly"
      />
    </MenuToggle>
  </PlainButton>
  <Menu
    className="ums-share-permissions-menu"
    isHidden={false}
    isSubmenu={false}
  >
    <SelectMenuItem
      isSelected={false}
      key="canViewDownload"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownload"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownloadDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
    <SelectMenuItem
      isSelected={true}
      key="canViewOnly"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnly"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnlyDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
  </Menu>
</DropdownMenu>
`;

exports[`features/unified-share-modal/SharedLinkPermissionMenu render() it should render correct menu 4`] = `
<DropdownMenu
  constrainToScrollParent={false}
  constrainToWindow={true}
  isRightAligned={false}
>
  <PlainButton
    className="lnk"
    disabled={false}
  >
    <MenuToggle>
      <FormattedMessage
        defaultMessage="Can view only"
        id="boxui.unifiedShare.sharedLinkPermissionsViewOnly"
      />
    </MenuToggle>
  </PlainButton>
  <Menu
    className="ums-share-permissions-menu"
    isHidden={false}
    isSubmenu={false}
  >
    <SelectMenuItem
      isSelected={false}
      key="canViewDownload"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownload"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view and download"
            id="boxui.unifiedShare.sharedLinkPermissionsViewDownloadDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
    <SelectMenuItem
      isSelected={true}
      key="canViewOnly"
      onClick={[Function]}
    >
      <div>
        <strong>
          <FormattedMessage
            defaultMessage="Can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnly"
          />
        </strong>
        <small
          className="usm-menu-description"
        >
           
          <FormattedMessage
            defaultMessage="Users can view only"
            id="boxui.unifiedShare.sharedLinkPermissionsViewOnlyDescription"
          />
           
        </small>
      </div>
    </SelectMenuItem>
  </Menu>
</DropdownMenu>
`;

exports[`features/unified-share-modal/SharedLinkPermissionMenu render() should not render if permission level prop is not set 1`] = `""`;
